--- a/Areas/Identity/Pages/Account/Manage/Bill.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Bill.cshtml
@@ -105,7 +105,26 @@
                     {
                         if (@ADD(ID_index)) {};
                     }
-                    <div class="text-right">Tổng thanh toán&nbsp;&nbsp;<span class="tongthanhtoan"></span></div>
+                    <div class="result-pannel">
+                        <div class="text-right">
+                            <div class="text-right">Phí vận chuyển&nbsp;&nbsp;</div>
+                                <div class="text-right text-right1">
+                                    <span class="phivanchuyen"></span>
+                            </div>
+                        </div>
+                        <div class="text-right">
+                            <div class="text-right">Khuyến mãi từ Zerone&nbsp;&nbsp;</div>
+                            <div class="text-right text-right1">
+                                <span class="voucher">@Html.DisplayFor(modelItem => it.Order.VoucherMoney)</span>
+                            </div>
+                        </div>
+                        <div class="text-right">
+                            <div class="text-right">Tổng thanh toán&nbsp;&nbsp;</div>
+                            <div class="text-right text-right1">
+                                <span class="tongthanhtoan">@Html.DisplayFor(modelItem => it.Order.Paid)</span>
+                           </div>
+                       </div>
+                        </div>
                     <hr />
                 }
             </div>
