--- a/Views/Products/ExDetails.cshtml
+++ b/Views/Products/ExDetails.cshtml
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="col">
-                <div style="padding-top: 35px">
+                <div>
                     <h3 class="unitprice"><span id="price1"></span></h3>
                     <h5 class="msrp" style="display: inline; margin-left: 20px"><span id="price2"></span></h5>
                 </div>
@@ -71,13 +71,15 @@
                     @Html.ActionLink("<p><i class='bi bi-cart-check-fill'></i> MUA NGAY</p>","AddCart","OrderDetails",new {productid = @Model.ProductId},null)
 
                 </div>
-                @if (Model.Category.ParentCategoryId < 5){
+               
                 <div class="grouping" style="position: relative; top: 100px;">
-                    <div class="phienban" id = "verpro">
+                   @if (Model.Category.ParentCategoryId < 5){
+                    <div class="phienban" id="verpro">
                         <h6>Phiên bản</h6>
-   
+                        
                     </div>
-                    <div class="mausac" id = "colopro">
+                    }
+                    <div class="mausac" id="colopro">
                         <h6>Màu sắc</h6>
            
                     </div>
@@ -85,7 +87,7 @@
 
                     </div>
                 </div>
-                }
+
                 <div class="uudai" style="position: relative; top: 110px;">
                     <h6><i class="bi bi-gift-fill"></i> Ưu đãi</h6>
                     <div class="uudaicontent">
@@ -1958,17 +1960,17 @@
                  for(let i =1; i< spcol.length; ++i){
                      if(actualcol == spcol[i]){
                           $('#colopro').append(`
-                    <a class="btn btn-outline-primary" id="${spcol[i]}"  href="/products/detailcolor?productname=@Model.ProductName&version=@Model.Version&color=${spcol[i]}">${spcol[i]} </a>
+                    <a class="btn btn-outline-primary" id="${spcol[i]}"  href="/products/detailcolor?productname=@Model.ProductName&version=@Model.Version&color=${spcol[i]}">${spcol[i]}</a>
                     `);
                      } else{
                            $('#colopro').append(`
-                    <a class="btn" id="${spcol[i]}"  href="/products/detailcolor?productname=@Model.ProductName&version=@Model.Version&color=${spcol[i]}">${spcol[i]} </a>
+                    <a class="btn" id="${spcol[i]}"  href="/products/detailcolor?productname=@Model.ProductName&version=@Model.Version&color=${spcol[i]}">${spcol[i]}</a>
                     `);
                      }
                   
                  }
-              
-              
+                $("a#undefined").css({"display" : "none"});
+                $("a#undefined").attr("href", "#");
                /////////////////////////////////////////
                
         });
