--- a/Areas/Admin/Views/PurchaseDetails/Cancel.cshtml
+++ b/Areas/Admin/Views/PurchaseDetails/Cancel.cshtml
@@ -27,7 +27,7 @@
             <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="javascript:void(0)">Quản lý mua hàng</a></li>
-                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Tất cả giao dịch</a></li>
+                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Đơn hàng đã hủy</a></li>
                 </ol>
             </div>
         </div>
@@ -48,7 +48,7 @@
                                         <option value="1">Yêu cầu báo giá</option>
                                         <option value="2">Thanh toán đơn hàng</option>
                                         <option value="3">Đơn hàng đã hoàn thành</option>
-                                        <option value="4">Đơn hàng đã hủy</option>
+                                        <option value="4" selected="selected">Đơn hàng đã hủy</option>
                                     </select>
                                 </div>
                             </form>
