--- a/Areas/Admin/Views/SaleManagers/Cancel.cshtml
+++ b/Areas/Admin/Views/SaleManagers/Cancel.cshtml
@@ -28,7 +28,7 @@
             <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="javascript:void(0)">Quản lý bán hàng</a></li>
-                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Đơn hàng chờ xác nhận</a></li>
+                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Đơn hàng đã hủy</a></li>
                 </ol>
             </div>
         </div>
@@ -46,10 +46,10 @@
                                     <label>Tinh trang: </label>
                                     <select class="form-control" id="select_category">
                                         <option value="0">ALL</option>
-                                        <option value="1" selected="selected" >Đơn hàng chờ xác nhận</option>
+                                        <option value="1">Đơn hàng chờ xác nhận</option>
                                         <option value="2">Đơn hàng đang vận chuyển</option>
                                         <option value="3">Đơn hàng đã hoàn thành</option>
-                                        <option value="4">Đơn hàng đã hủy</option>
+                                        <option value="4" selected="selected">Đơn hàng đã hủy</option>
                                     </select>
                                 </div>
                             </form>
@@ -164,7 +164,7 @@
     <script src="~/vendor/datatables/js/jquery.dataTables.min.js"></script>
     <script src="~/js/plugins-init/datatables.init.js"></script>
     <script type="text/javascript">
-         $('#select_category').change(function() {
+        $('#select_category').change(function() {
             var val = $(this).val();
             if (val == 0) {
                 window.location = '/admin/salemanagers/transaction';
