--- a/Areas/Admin/Views/SaleManagers/Shipping.cshtml
+++ b/Areas/Admin/Views/SaleManagers/Shipping.cshtml
@@ -9,10 +9,12 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>ProductBill</title>
-      <!-- Datatable -->
+    <!-- Datatable -->
     <link href="~/vendor/datatables/css/jquery.dataTables.min.css" rel="stylesheet">
     <!-- Custom Stylesheet -->
     <link href="~/css/style.css" rel="stylesheet">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+
 </head>
 <body>
 
@@ -26,7 +28,7 @@
             <div class="col-sm-6 p-md-0 justify-content-sm-end mt-2 mt-sm-0 d-flex">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="javascript:void(0)">Quản lý bán hàng</a></li>
-                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Đơn hàng vận chuyển</a></li>
+                    <li class="breadcrumb-item active"><a href="javascript:void(0)">Đơn hàng đang vận chuyển</a></li>
                 </ol>
             </div>
         </div>
@@ -38,85 +40,113 @@
                 <div class="card">
                     <div class="card-header">
                         <h4 class="card-title"> Hóa đơn sản phẩm</h4>
+                        <div class="float-right">
+                            <form class="form-inline">
+                                <div class="form-group">
+                                    <label>Tinh trang: </label>
+                                    <select class="form-control" id="select_category">
+                                        <option value="0">ALL</option>
+                                        <option value="1">Đơn hàng chờ xác nhận</option>
+                                        <option value="2" selected="selected">Đơn hàng đang vận chuyển</option>
+                                        <option value="3">Đơn hàng đã hoàn thành</option>
+                                        <option value="4">Đơn hàng đã hủy</option>
+                                    </select>
+                                </div>
+                            </form>
+                        </div>
                     </div>
+
                     <div class="card-body">
                         <div class="table-responsive">
                             <table id="example" class="display" style="min-width: 845px">
-                                   <thead>
+                                <thead>
                                     <tr>
                                         <th>#</th>
                                         <th>Tên</th>
                                         <th>Đơn hàng</th>
                                         <th>Sản phẩm</th>
-                                         <th>Số lượng</th>
+                                        <th>Số lượng</th>
                                         <th>Tình trạng đơn hàng</th>
                                         <th>Duyệt</th>
                                     </tr>
                                 </thead>
-                             <tbody>
-                         
-                            @foreach (var item in Model){
-                                   
+                                <tbody>
+
+                                    @foreach (var item in Model) {
+
                                         <tr>
-                                        <td>
-                                            <div class="round-img">
-                                                <a href=""><img width="35" src="~/images/avatar/1.png" alt=""></a>
-                                            </div>
-                                        </td>
-                                        <td>@Html.DisplayFor(model => item.Order.Customer.AppUser.FullName)</td>
-                                        <td><span>@Html.DisplayFor(model => item.OrderId)</span></td>
-                                        <td><span style= "white-space: pre-line; 
+                                            <td>
+                                                <div class="round-img">
+                                                    <a href=""><img width="35" src="~/images/avatar/1.png" alt=""></a>
+                                                </div>
+                                            </td>
+                                            <td>@Html.DisplayFor(model => item.Order.Customer.AppUser.FullName)</td>
+                                            <td><span>@Html.DisplayFor(model => item.OrderId)</span></td>
+                                            <td>
+                                                <span style="white-space: pre-line;
 }">
-                                            @Html.DisplayFor(model => item.Voucher)</span></td>
-                                         <td><span style= "white-space: pre-line;
+                                                    @Html.DisplayFor(model => item.Voucher)
+                                                </span>
+                                            </td>
+                                            <td>
+                                                <span style="white-space: pre-line;
 }">
-                                            @Html.DisplayFor(model => item.IDSKU)</span></td>
-                                      
-                                        @{string color = "badge badge-warning";    }
+                                                    @Html.DisplayFor(model => item.IDSKU)
+                                                </span>
+                                            </td>
 
-                                        @if(item.Order.TransactStatus.Equals("done")){
-                                            color = "badge badge-success" ;
-                                        }
-                                        @if (item.Order.TransactStatus.Equals("shipping")) {
-                                            color = "badge badge-secondary";
-                                        }
-                                        @if (item.Order.TransactStatus.Equals("cancel")) {
-                                            color = "badge badge-danger";
-                                        }
-                                        @if(item.Order.TransactStatus.Equals("accept")){
-                                            color = "badge badge-info" ;
-                                        }
+                                            @{
+                                                string color = "badge badge-warning";
+                                            }
 
-                                        <td><span class= "@color" >@Html.DisplayFor(model => item.Order.TransactStatus)</span></td>
-                                           @{ string status = "Xác nhận"; color = "btn btn-outline-info"; string color_can = "btn btn-danger"; string text_can = "Hủy"; }
+                                            @if (item.Order.TransactStatus.Equals("done")) {
+                                                color = "badge badge-success";
+                                            }
+                                            @if (item.Order.TransactStatus.Equals("shipping")) {
+                                                color = "badge badge-secondary";
+                                            }
+                                            @if (item.Order.TransactStatus.Equals("cancel")) {
+                                                color = "badge badge-danger";
+                                            }
+                                            @if (item.Order.TransactStatus.Equals("accept")) {
+                                                color = "badge badge-info";
+                                            }
 
-                                         @if(item.Order.TransactStatus.Equals("accept")){
+                                            <td><span class="@color">@Html.DisplayFor(model => item.Order.TransactStatus)</span></td>
+                                            @{
+                                                string status = "Xác nhận";
+                                                color = "btn btn-outline-info";
+                                                string color_can = "btn btn-danger";
+                                                string text_can = "Hủy";
+                                            }
+
+                                            @if (item.Order.TransactStatus.Equals("accept")) {
                                                 status = "vận chuyển";
                                                 color = "btn btn-outline-secondary";
-                                            } 
-                                        @if(item.Order.TransactStatus.Equals("shipping")){
+                                            }
+                                            @if (item.Order.TransactStatus.Equals("shipping")) {
                                                 status = "thanh toán";
                                                 color = "btn btn-outline-success";
-                                            } 
-                                              @if(item.Order.TransactStatus.Equals("done") || item.Order.TransactStatus.Equals("cancel")){
+                                            }
+                                            @if (item.Order.TransactStatus.Equals("done") || item.Order.TransactStatus.Equals("cancel")) {
                                                 status = "";
-                                                 color = "";
+                                                color = "";
                                                 color_can = "";
                                                 text_can = "";
-                                            } 
-                                          <td>
-                                             <a asp-action="Accept_S" asp-route-id="@item.OrderId" class = "@color" >@status</a>  
-                                             <a asp-action="BillDetails_S" asp-route-id="@item.OrderId" class = "btn btn-outline-primary">Chi tiết</a>    
-                                             <a asp-action="BillDel_S" asp-route-id="@item.OrderId" class = "@color_can">@text_can</a>   
-                                        </td>
-                                    </tr>   
-                               }
+                                            }
+                                            <td>
+                                                <a asp-action="Accept_T" asp-route-id="@item.OrderId" class="@color">@status</a>
+                                                <a asp-action="BillDetails_T" asp-route-id="@item.OrderId" class="btn btn-outline-primary">Chi tiết</a>
+                                                <a asp-action="BillDel_T" asp-route-id="@item.OrderId" class="@color_can">@text_can</a>
+                                            </td>
+                                        </tr>
+                                    }
                                 </tbody>
-                               
-                             
+
+
                             </table>
-                            <script type = "text/javascript">
-                                   $("#product").val().replace(/\n/g, '<br/>');
+                            <script type="text/javascript">
+                                $("#product").val().replace(/\n/g, '<br/>');
                             </script>
                         </div>
                     </div>
@@ -133,5 +163,24 @@
     <!-- Datatable -->
     <script src="~/vendor/datatables/js/jquery.dataTables.min.js"></script>
     <script src="~/js/plugins-init/datatables.init.js"></script>
+    <script type="text/javascript">
+         $('#select_category').change(function() {
+            var val = $(this).val();
+            if (val == 0) {
+                window.location = '/admin/salemanagers/transaction';
+            } else if (val == 1) {
+                window.location = '/admin/salemanagers/productbill';
+            }
+            else if (val == 2) {
+                window.location = '/admin/salemanagers/shipping';
+            }
+            else if (val == 3) {
+                window.location = '/admin/salemanagers/done';
+            }
+            else if (val == 4) {
+                window.location = '/admin/salemanagers/cancel';
+            }
+        });
+    </script>
 </body>
 </html>
