--- a/Views/Shared/_AdminDropdownMenu.cshtml
+++ b/Views/Shared/_AdminDropdownMenu.cshtml
@@ -17,7 +17,7 @@
 <li class="nav-item dropdown header-profile" id="admin-item">
     <a class="nav-link" href="#" role="button" data-toggle="dropdown">
         <i class="mdi mdi-account"></i>
-        <span class="ml-2" style="color: #343a40 !important; padding: 0px;">Quản lý</span>
+        <span class="ml-2" style="color: #343a40 !important; padding: 0px;"><i class="bi bi-gear"  style="font-size: 18px; vertical-align: middle;"></i>&nbspQuản lý</span>
     </a>
     <div class="dropdown-menu dropdown-menu-right">
         <a class="dropdown-item" asp-page="/Role/Index" asp-area="Admin">
