--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -11,6 +11,7 @@
     <link href="@Url.Content("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css")" rel="stylesheet" type="text/css" />
     <script src="@Url.Content("~/lib/jquery/dist/jquery.min.js")"></script>
     <script src="@Url.Content("~/lib/bootstrap/dist/js/bootstrap.bundle.min.js")"></script>
+    <link href="~/css/style2.css" rel="stylesheet" type="text/css" media="all" />
     <script src="~/js/site.js" asp-append-version="true"></script>
     @RenderSection("Styles", false)
 </head>
@@ -26,7 +27,7 @@
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <p class="logo mb-0">Zer<span style="color: #be1e2d">o</span>ne.vn</p>
                 </a>
-                <form id="f_search" method="get" method="get" asp-area="" asp-controller="Home" asp-action="Search" style="width: 30%" >
+                <form id="f_search" method="get" method="get" asp-area="" asp-controller="Home" asp-action="Search" style="width: 30%">
                     <div class="input-group mb-0" style="width: 100%">
                         <input id="ipt_search" type="text" class="form-control" name="searchString" placeholder="Bạn muốn tìm sản phẩm nào ?" aria-label="search" aria-describedby="basic-addon2" />
                         <div class="input-group-append">
@@ -40,18 +41,25 @@
                         <span class="navbar-toggler-icon"></span>
                     </button>
                 </form>
-@*                <form id="f_search" method="get" asp-action="Search">
-                <div class="form-group">
-                    <div class="input-group">
-                        <input id="ipt_search" type="search" class="form-control" name="SearchTerm" />
-                        <span class="input-group-btn">
-                            <button class="btn btn-default">
-                                Search
-                            </button>
-                        </span>
+                <label class="theme-switch" for="checkbox">
+                    <input type="checkbox" id="checkbox">
+                    <div class="mode-container">
+                        <i class="gg-sun"></i>
+                        <i class="gg-moon"></i>
                     </div>
-                </div>
-            </form>*@
+                </label>
+                @*                <form id="f_search" method="get" asp-action="Search">
+                    <div class="form-group">
+                    <div class="input-group">
+                    <input id="ipt_search" type="search" class="form-control" name="SearchTerm" />
+                    <span class="input-group-btn">
+                    <button class="btn btn-default">
+                    Search
+                    </button>
+                    </span>
+                    </div>
+                    </div>
+                    </form>*@
                 @await Html.PartialAsync("_LoginPartial")
             </div>
         </nav>
@@ -94,16 +102,16 @@
                                 <li class="nav-item"><a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="17"><img src="https://cdn.tgdd.vn/Brand/1/logo-asus-149x40.png" width="90" /></a></li>
                                 <li class="nav-item"><a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="18"><img src="https://cdn.tgdd.vn/Brand/1/logo-acer-149x40.png" width="90" /></a></li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item"  asp-controller="Products" asp-action="Category" asp-route-id="19"><img src="https://cdn.tgdd.vn/Brand/1/logo-dell-149x40.png" width="90" /></a>
+                                    <a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="19"><img src="https://cdn.tgdd.vn/Brand/1/logo-dell-149x40.png" width="90" /></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item"  asp-controller="Products" asp-action="Category" asp-route-id="20"><img src="https://cdn.tgdd.vn/Brand/1/logo-lenovo-149x40.png" width="90" /></a>
+                                    <a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="20"><img src="https://cdn.tgdd.vn/Brand/1/logo-lenovo-149x40.png" width="90" /></a>
                                 </li>
                                 <li class="nav-item">
-                                     <a class="dropdown-item"  asp-controller="Products" asp-action="Category" asp-route-id="21"><img src="https://cdn.tgdd.vn/Brand/1/logo-hp-149x40-1.png" width="90" /></a>
+                                    <a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="21"><img src="https://cdn.tgdd.vn/Brand/1/logo-hp-149x40-1.png" width="90" /></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item"  asp-controller="Products" asp-action="Category" asp-route-id="22"><img src="https://cdn.tgdd.vn/Brand/1/logo-msi-149x40.png" width="90" /></a>
+                                    <a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="22"><img src="https://cdn.tgdd.vn/Brand/1/logo-msi-149x40.png" width="90" /></a>
                                 </li>
                             </ul>
                         </div>
@@ -146,39 +154,39 @@
                             </ul>
                         </div>
                         @*                        <div>
-                                <a class="dropdown-item"><strong>TAI NGHE</strong></a>
-                                <ul class="nav" style="width:300px">
-                                    <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Sony</a></li>
-                                    <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">JBL</a></li>
-                                    <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">AKG</a></li>
-                                    <li class="nav-item">
-                                        <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Apple AirPods</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Energizer</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Huawei</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">LG</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Samsung</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Beats</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Nokia</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Pisen</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Motorola</a>
-                                    </li>
-                                </ul>
+                            <a class="dropdown-item"><strong>TAI NGHE</strong></a>
+                            <ul class="nav" style="width:300px">
+                            <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Sony</a></li>
+                            <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">JBL</a></li>
+                            <li class="nav-item"><a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">AKG</a></li>
+                            <li class="nav-item">
+                            <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Apple AirPods</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Energizer</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Huawei</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">LG</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Samsung</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Beats</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Nokia</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Pisen</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Index">Motorola</a>
+                            </li>
+                            </ul>
                             </div>*@
                     </div>
                 </li>
@@ -195,13 +203,13 @@
                                     <a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="62"><img src="https://cdn.tgdd.vn/Brand/1/logo-hyperx-1-220x48-1.jpg" width="90" /></a>
                                 </li>
                                 <li class="nav-item">
-                                     <a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="63"><img src="https://cdn.tgdd.vn/Brand/1/Logitech86-b_41.jpg" width="90" /></a>
+                                    <a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="63"><img src="https://cdn.tgdd.vn/Brand/1/Logitech86-b_41.jpg" width="90" /></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="65"><img src="https://cdn.tgdd.vn/Brand/1/Energizer57-b_50.jpg" width="90" /></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="dropdown-item"  asp-controller="Products" asp-action="Category" asp-route-id="66"><img src="https://cdn.tgdd.vn/Brand/1/Xmobile57-b_42.jpg" width="90" /></a>
+                                    <a class="dropdown-item" asp-controller="Products" asp-action="Category" asp-route-id="66"><img src="https://cdn.tgdd.vn/Brand/1/Xmobile57-b_42.jpg" width="90" /></a>
                                 </li>
                             </ul>
                         </div>
@@ -290,7 +298,7 @@
                         e.preventDefault();
                         return false;
                     }
-                    
+
             });
             $('#button-addon1').click(function (e){
                     var searchTerm = $("#ipt_search").val();
@@ -303,6 +311,30 @@
                     }
             })
         });
+    </script>
+    <script>
+        const toggleSwitch = document.querySelector('.theme-switch input[type="checkbox"]');
+        const currentTheme = localStorage.getItem('theme');
+
+        if (currentTheme) {
+            document.documentElement.setAttribute('data-theme', currentTheme);
+
+            if (currentTheme === 'dark') {
+                toggleSwitch.checked = true;
+            }
+        }
+
+        function switchTheme(e) {
+            if (e.target.checked) {
+                document.documentElement.setAttribute('data-theme', 'dark');
+                localStorage.setItem('theme', 'dark');
+            }
+            else {        document.documentElement.setAttribute('data-theme', 'light');
+                  localStorage.setItem('theme', 'light');
+            }
+        }
+
+        toggleSwitch.addEventListener('change', switchTheme, false);
     </script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
