--- a/Areas/Admin/Views/SaleManagers/ProductBill.cshtml
+++ b/Areas/Admin/Views/SaleManagers/ProductBill.cshtml
@@ -42,7 +42,7 @@
                         <div>
                              <h4 class="card-title"> Hóa đơn sản phẩm</h4>
                             <div class="mt-4">
-                                <a asp-action="XuatFile" class="btn btn-primary" style ="background-color:green; color: white; border: none; border-radius: 20px  "><i class="bi bi-download"></i>&nbsp;&nbsp;&nbsp;Xuất CSV</a>
+                                <a asp-action="XuatFilePaid" class="btn btn-primary" style ="background-color:green; color: white; border: none; border-radius: 20px  "><i class="bi bi-download"></i>&nbsp;&nbsp;&nbsp;Xuất CSV</a>
                             </div>
                         </div>
 
