update nhiều nhiều nhìu

--- a/Areas/Admin/Pages/Role/AddUserRole.cshtml
+++ b/Areas/Admin/Pages/Role/AddUserRole.cshtml
@@ -25,6 +25,12 @@
         </form>
     </div>
 </div>
+  <script src="~/vendor/global/global.min.js"></script>
+    <script src="~/js/quixnav-init.js"></script>
+    <script src="~/js/custom.min.js"></script>
+
+
+
 
 @section Scripts {
     <script src="~/lib/multiple-select/multiple-select.min.js"></script>
