--- a/Areas/Admin/Pages/Role/Add.cshtml
+++ b/Areas/Admin/Pages/Role/Add.cshtml
@@ -4,7 +4,7 @@
     var btnText = Model.IsUpdate ? "Cập nhật" : "Tạo mới";
 }
 
-
+     <div class="container-fluid">
 <h1 class="h3 mb-1 text-gray-800">@ViewData["Title"]</h1>
 <partial name="_StatusMessage" model="@Model.StatusMessage" />
 
@@ -25,6 +25,12 @@
         </form>
     </div>
 </div>
+</div>
+       <script src="~/vendor/global/global.min.js"></script>
+    <script src="~/js/quixnav-init.js"></script>
+    <script src="~/js/custom.min.js"></script>
+
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
