--- a/Areas/Admin/Pages/Role/Delete.cshtml
+++ b/Areas/Admin/Pages/Role/Delete.cshtml
@@ -3,7 +3,7 @@
 @{
    ViewData["Title"] = "Xóa role";
 }
-
+   <div class="container-fluid">
 <h1 class="h3 mb-1 text-gray-800">@ViewData["Title"]</h1>
 <div class="row">
     <div class="col-md-6">
@@ -17,6 +17,13 @@
         </form>
     </div>
 </div>
+   </div> 
+   <script src="~/vendor/global/global.min.js"></script>
+    <script src="~/js/quixnav-init.js"></script>
+    <script src="~/js/custom.min.js"></script>
+
+
+
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
