--- a/Areas/Admin/Views/_Layout.cshtml
+++ b/Areas/Admin/Views/_Layout.cshtml
@@ -232,7 +232,7 @@
                         <ul aria-expanded="false">
                             <li><a asp-controller="Staffs" asp-action="Index" asp-area="Admin">Nhân viên</a></li>
                             <li><a asp-controller="Customers" asp-action="Index" asp-area="Admin">Khách hàng</a></li>
-                            <li><a asp-controller="Vouchers" asp-action="Index" asp-area="Admin">Khuyến mãi</a></li>
+                            <li><a  asp-page="/Role/Index" asp-area="Admin">Quản lý quyền</a></li>
                         </ul>
                     </li>
                     <li>
