--- a/Views/OrderDetails/Pay.cshtml
+++ b/Views/OrderDetails/Pay.cshtml
@@ -249,6 +249,74 @@
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-6 mb-4">
+                                                      <select id="tinh">
+                                                        Chọn tỉnh
+                                                        <option> TP Hồ Chí Minh</option>
+                                                        <option> Hà Nội</option>
+                                                        <option> Đà Nẵng</option>
+                                                        <option> Hải Phòng</option>
+                                                        <option> Hà Giang</option>
+                                                        <option>Cao Bằng</option>
+                                                        <option>Lai Châu</option>
+                                                        <option>Tuyên Quang</option>
+                                                        <option>Lạng Sơn</option>
+                                                        <option>Bắc Kạn</option>
+                                                        <option>Thái Nguyên</option>
+                                                        <option>Yên Bái</option>
+                                                        <option>Sơn La</option>
+                                                        <option>Phú Thọ</option>
+                                                        <option>Vĩnh Phúc</option>
+                                                        <option>Quảng Ninh</option>
+                                                        <option>Bắc Giang</option>
+                                                        <option>Bắc Ninh</option>
+                                                        <option>Hải Dương</option>
+                                                        <option>Hưng Yên</option>
+                                                        <option>Hòa Bình</option>
+                                                        <option>Hà Nam</option>
+                                                        <option>Nam Định</option>
+                                                        <option>Thái Bình</option>
+                                                        <option>Ninh Bình</option>
+                                                        <option>Thanh Hóa</option>
+                                                        <option>Nghệ An</option>
+                                                        <option>Hà Tĩnh</option>
+                                                        <option>Quảng Bình</option>
+                                                        <option>Quảng trị</option>
+                                                        <option>Thừa Thiên Huế</option>
+                                                        <option>Quảng Nam</option>
+                                                        <option>Quảng Ngãi</option>
+                                                        <option>Kontum</option>
+                                                        <option>Bình Định</option>
+                                                        <option>Gia Lai</option>
+                                                        <option>Phú Yên</option>
+                                                        <option>Đắk Lắk</option>
+                                                        <option>Khánh Hòa</option>
+                                                        <option>Lâm Đồng</option>
+                                                        <option>Bình Phước</option>
+                                                        <option>Bình Dương</option>
+                                                        <option>Ninh Thuận</option>
+                                                        <option>Tây Ninh</option>
+                                                        <option>Bình Thuận</option>
+                                                        <option>Đồng Nai</option>
+                                                        <option>Long An</option>
+                                                        <option>Đồng Tháp</option>
+                                                        <option>An Giang</option>
+                                                        <option>Bà Rịa – VT</option>
+                                                        <option>An Giang</option>
+                                                        <option>Tiền Giang</option>
+                                                        <option>Kiên Giang</option>
+                                                        <option>Cần Thơ</option>
+                                                        <option>Bến Tre</option>
+                                                        <option>Vĩnh Long</option>
+                                                        <option>Trà Vinh</option>
+                                                        <option>Sóc Trăng</option>
+                                                        <option>Bạc Liêu</option>
+                                                        <option>Cà Mau</option>
+                                                        <option>Điện Biên</option>
+                                                        <option>Đắk Nông</option>
+                                                        <option>Hậu Giang</option>
+                                                    </select>
+                                                </div>
+                                                <div class="col-lg-6 mb-4">
                                                     <div class="form-group">
                                                         <label class="text-label">Địa chỉ giao hàng<span><a asp-action= "ShipMoney" asp-area="" asp-controller="OrderDetails" asp-route-id="@item.OrderId">Cập nhật địa chỉ</a></span></label>
                                                         <input id="shipadd" asp-for="@item.Order.Customer.ShipAddress" type="text" name="place" class="form-control" required>
@@ -427,7 +495,7 @@
 
                                             ///
                                             function submitForm() {
-
+                                                                      
                                             var model = new Object();
                                             model.Orderid = oid;
                                             model.Shipaddress = address;
@@ -435,6 +503,7 @@
                                             model.Paid = total;
                                             model.Shipcompany = shipcom;
                                             model.TypePay = types;
+                                            model.Provi = $("#tinh").val();
                                             jQuery.ajax({
                                             type: "POST",
                                             url: "@Url.Action("Payment","OrderDetails")",
