Chúc mừng năm mới

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,27 +8,52 @@
     <link href="@Url.Content("https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.css")" rel="stylesheet" type="text/css" />
 }
 <body>
+        <div class="sticky-side-banner">
+        <div>
+            
+            <div  class="side-banner-left">
+                <div class="side-banner-header">
+                    <div>
 
+                   </div>
+                </div>
+                <div class="side-banner-content">
+                    <h1>Cung<br />Chúc<br />Tân<br />Xuân<br /><img src='/img/index/webcomponent2.png' style="height: 60%; width: 60%"/></h1>        
+                </div>
+                <div class="side-banner-footer">
+                    <img src='/img/index/web_component3.png' />
+                </div>
+            </div>
+        </div>
+        <div>
+            <div  class="side-banner-right">
+                <div class="side-banner-header">
+                   <div>
+
+                   </div>
+                </div>
+                <div class="side-banner-content">
+                    <h1>Vạn<br />Sự <br />Như <br />Ý<br /><img src='/img/index/webcomponent2.png' style="height: 60%; width: 60%"/></h1>
+                </div> 
+                <div class="side-banner-footer">
+                    <img src='/img/index/web_component3.png'  style="transform: scaleX(-1);"/>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="bottom-left-img">
+        <img src="/img/index/web_component4.png"/>
+    </div>
     @*Banner  quảng cáo*@
     <div class="slide">
         <div>
-            <a href="#">
-                <img class="d-block w-100" src="https://lh3.googleusercontent.com/47OdAQrEC5dvqaRBJJu79WK52jhiN0-YTHwnZS5slaZGIhsBxecu_l3f2MSemVM2NQdmC5cff0U1OwnYZkh-QvieFrBHQn4TdAnPzwxaYe1DzyWO7X7Qo0Af3XFyma49uGOOj0j5b7BIsyaFDzk8SPxaq03vdE-qeiTOha9x2Iv_XHSwEbyXSH_VJpvZAQO5-KIdEwj-4f6vpbs18LjFySAwxTBtUKxpj0s1I_xLUV8ZAELEN22iBvHHoyulzZn4F-R3kVeVeg8UWaBPe1aKV7hnRo_wNa8AnrVNh8-pWynkd7lxwiGQr82hd12mikwnZMoQ6zCzG5tzSTfmJe0eOMu6siRlamhTHwyo6fYjgIaJmXBNcyD8x9H7QYRqDTgkTNU80PazsfrxwrxV4BMidpUnHdVXk5vLIPzzl6GFfSIYdERhZxkrcviSTy4EfuOtP2vOmcjxPhHfKbyFk3gNLyCKN6te-dINy2JhVpdd2lSdt8eNCS25WgLafrL-RO85pb9quC1D5QgcZ031q0wa1gH_of33Gz8N5mOrXYk-W3lQMBOTKdJa5G9IPVP9sxfyC3O-JVCs9c1gygK3iI0NHTJKhF3Vuq0PTerbOUCaEFVGr0aRDE6pj61H_AdO9eDXFLzrAzHPTod_61vA0u5ZnPFUxASQcSchAH6e5IQQCh1b9gfmEtO4EAVe6y4TcOo1pO_c7A3K1I6LR1VeGKpVKw_o=w1200-h382-no?authuser=1" alt="First slide">
+            <a href="/home/search?searchString=iphone+13">
+                <img class="d-block w-100" src="https://lh3.googleusercontent.com/pw/AM-JKLVv4QzQECR14T9bzSg4kGqcU-xURAL4hU8E1JFdizEBh6k1hmHUOp-7PQpw3kkDzJLknPtPzC5wb6KClXqaH0LXaluh3dSK1vQVh6P67BQb6RGvc04d4UB8lRhvRikdM6tgJ_djWDAb-rat2Ht1LOwy=w1200-h382-no?authuser=1" alt="First slide">
             </a>
         </div>
         <div>
-            <a href="#">
-                <img class="d-block w-100" src="https://lh3.googleusercontent.com/vwuQjz0zg5GMzXFcQPLLApoWs3nfD4wHpL2TdN5HrCRkStUWhGFkT2yhpVfR2QQ6rp1TpvOkSugOZiJcmd37-Q_yEkJL2TXUpzxRH99fWjc5ZUBJg5kyo-jyOfpvUX13OuXdkoTEjbpxrUKHHKFLYElrowab8lVkICsNaYLUzVM7ndWYM7DrC-wIf9EwGL30b2nz2KN3CIBcVW2vyIMe9RB536ITZGD0MTjsdCM4HPJvT3D9qPryc4Aid2vbnN9-oBpJQNwMmAE-CKm4F9F5ibwSNGaOHd0Ac9XzqcA3UBKr5WtX1hDN9H85y_YttyRq5QlIYGOjVH5r7AYPocSdQxQMZcWuXMwlF0svdK9wY-25GT5e-HoLpfy9j0TWEzwnN6YbpkV3FXW71qvrX9CtX65fUqdq-2gLc8X6T0B3T_hd7qPbhA2_68DnJ5yCQ4k0MTEjTFJKvWXtVStWscK0fiKTTkfrYoC_4Ox8b3761bXbD0FTf3gHg_49tffps1cXWbyxWsrgbf7cm1dsX7SE_mNEAhvmQ2tto50XS6mEfNJ3Ye8NY2N7ROmQp_aAFrHPYFJFri4Dlo0b6Cxx46S0Kp0rk7mXrbAbbhOhptPsFKmE72b3PQZE-f_MNek-TM6JirpmkL9g3Mbx6oCFr5tKYltkT5eaEf0D8ljuaDxKF3LooUuE98_PtaQp-Fd-RMNMe_sHDO05C1RqE_4HGSTrb9Ki=w1200-h382-no?authuser=1" alt="Second slide">
-            </a>
-        </div>
-        <div>
-            <a href="#">
-                <img class="d-block w-100" src="https://lh3.googleusercontent.com/K-nORrHzgyphSPht1vyktpuZgaEEsQ-xe3ChreUV-PXzFYm7H0jS37xEgZz8KWPd3QPqe6Mjvp8VPHa0qbrwYBEKpTosWSticHEiMfBu6h6r5ZZRZGTkPQes7G6nWA-oOVCStq7J7j5ru8P1EsOGC1dxezciVNog7z5bS2lW7eJVaPK5CnxIfbvG_2QIWvX4pBrtoDuH1tjLfVesy67arDy2-WXtWVxh-DPQRCRap1RNmH-JARFliEmMa5aNYE68cksnqW-4IG9iSEuSX8H3mnAjCmRRPneMOtIbLxaIknigdVaAPO5T2HMvOA-WJjoSsZZzcHi9e4T8f6pRSN0DuXhREt24Vot4BkUMr_34H-oExriIwZjnJt5kj8ZcV6c9hmNXXkXDlhBu4tgnXUoeiY7MOyX8Yo1hD-wEI8WCqB-2owXQn8LKPQDdsOyCL2dsKsA_cI4v_tzhbs3n6B3Wrk_--W8PVrDFXJWV9Dt_7wtdQudVyMamn-ur_Yh-6Uox7yPLfMDrSXdKhk77R4HTaWAyUd7-ZRf1pinWgfSfDsYK5zcH7dpbbxg-EM8cgIUTR-cm87k70HRwButjulgpfp8o5m5HAmIU4PRP_84lywwIhJOZjBaorcIyVYxXAqTBLCP81yIrqp0kJfUV6BUkNGTaGdRQBaeIh5Ts3ENpsWbbay-37vCxPzgVtcJ3CBxtd2Nl_OsemhDn8-fpjYDKYlI8=w990-h315-no?authuser=1" alt="Third slide">
-            </a>
-        </div>
-        <div>
-            <a href="#">
-                <img class="d-block w-100" src="https://lh3.googleusercontent.com/hzZY71bvDRYfz0vVUWnKu2zWtm0k0Idb0nY6q-J9HKtHux8LPMnxEL336CIUVm5b4uUXgowhxxftKdktH9zw19ue84wfcpmCrNeeZE5WqY2AK19Q-qIugb2eFUMWqVFzG34DUvvm5Aly5oiUn_xHn5vdEHTGYr2te3MFSqyIJ5vNTCmZxM0M82FnjoMZwjM2xoETTYFvvzDRnHsXyb2YlEC1qrXd78PrbI6to0exfh1fjoT6YIL1jtfMNLOQOaMXqsfOPE2lUGMNJ043ghKkP7sXaqMgPx3jH8hQHBcGWlNYboUhQGJ4RZR47QYjKTwgvVzZadHY6xrZHE76gmKe-adpwxYnhIW6Ek4aPXSw1A9MQKNUeZyIZr7CxZT7BwW57SsjKModRdzE2Qz6xf2_8OGgvdd5E3GJz5dJQyxkKDsezLUCNOs2m4AqtMzHtkRVoPxBAheEVx26106yAfT1DhdCydPJM_14-R3hoF1HICQ3EvaPKSdiyJE9_EILSjM5giITqN81Hk3TUzyt06SSc8PwI-RuVZ54gMTW7NSpaEhRRUXZLm0CbOo0zFvlDaG8PRgMz-esQQozKp2MkaNhSpRv4d0vxCkMxDkidg6CXm_2sOMeyHF30wCqS5QSt0-Z3iTPBPQGefOms-IbdDuI_DT72EzrlryTyT51GPkqcszRUlRk0Sx6PlaCNT6oIPnkb4P_oJxL7wfS62lrWXb7tjiS=w1202-h382-no?authuser=1" alt="Fifth slide">
+            <a href="/home/search?searchString=galaxy+z">
+                <img class="d-block w-100" src="https://lh3.googleusercontent.com/pw/AM-JKLWwA1VU-d47zu2EMbreZ3V7a4OqWPtzU230NmzfBk84WKoTc2MgWtZ_V3dWl8d4u7-OLyUL-kxIIL-mKXZhWTGlEP2rJcIVQmup_4lm7keCSPPdqImtEUU2pMia5xo3fbMBMcxwTcEqcxqH0U1Pj__Q=w1200-h382-no?authuser=1" alt="Second slide">
             </a>
         </div>
         <div>
@@ -40,10 +65,10 @@
 
     @*---*@
     @*Khuyến mãi*@
-    <div style="background-color: #be1e2d; border-radius: 5px" class="khuyenmai mt-4">
+    <div style="background-color: #fed100; border-radius: 5px" class="khuyenmai mt-4">
         <h4>HOTSALE</h4>
   <div id="timer" style="display: inline-block; float:right; padding-top: 10px; padding-right: 6px;">
-            <span style="color:white;">Kết thúc sau</span>
+            <span style="color:black; font-weight: bold">Kết thúc sau</span>
             <div id="days"></div>
             <div id="hours"></div>
             <div id="minutes"></div>
@@ -55,7 +80,6 @@
                 <div>
                     <a asp-controller="Products" asp-action="Details" asp-route-id="@Model.ElementAt(i).ProductId">
                         <div class="card">
-                            <div class="lbsale"><span class="lbtragop">Trả góp 0%</span></div>
                             <img class="card-img-top" src="@Model.ElementAt(i).Picture" alt="@Model.ElementAt(i).ProductName">
                             <div class="card-body">
                                 <h6 class="card-title product-name">@Model.ElementAt(i).ProductName</h6>
@@ -117,7 +141,6 @@
                 <div>
                     <a asp-controller="Products" asp-action="Details" asp-route-id="@Model.ElementAt(i).ProductId">
                         <div class="card">
-                            <div class="lbsale"><span class="lbtragop">Trả góp 0%</span></div>
                             <img class="card-img-top" src="@Model.ElementAt(i).Picture" alt="@Model.ElementAt(i).ProductName">
                             <div class="card-body">
                                 <h6 class="card-title product-name">@Model.ElementAt(i).ProductName</h6>
@@ -169,7 +192,6 @@
                 <div>
                     <a asp-controller="Products" asp-action="Details" asp-route-id="@Model.ElementAt(i).ProductId">
                         <div class="card">
-                            <div class="lbsale"><span class="lbtragop">Trả góp 0%</span></div>
                             <img class="card-img-top" src="@Model.ElementAt(i).Picture" alt="@Model.ElementAt(i).ProductName">
                             <div class="card-body">
                                 <h6 class="card-title product-name">@Model.ElementAt(i).ProductName</h6>
@@ -216,7 +238,6 @@
                 <div>
                     <a asp-controller="Products" asp-action="Details" asp-route-id="@Model.ElementAt(i).ProductId">
                         <div class="card">
-                            <div class="lbsale"><span class="lbtragop">Trả góp 0%</span></div> @*Hơn 4 triệu thì cho trả góp*@
                             <img class="card-img-top" src="@Model.ElementAt(i).Picture" alt="@Model.ElementAt(i).ProductName">
                             <div class="card-body">
                                 <h6 class="card-title  product-name">@Model.ElementAt(i).ProductName</h6>
