--- a/wwwroot/css/views/home/index.css
+++ b/wwwroot/css/views/home/index.css
@@ -41,6 +41,12 @@
 .hotsale {
     background: linear-gradient(to bottom, #76bcfd, #1d2671);
 }*/
+body {
+    background-image: url(https://lh3.googleusercontent.com/pw/AM-JKLUCDlkDzeoxaR7uEi2k6o4NcNSX2loy2RlQHeAl6Wbk8Nr5trSSbAy_S53Buy5rwANihK9SNhj0TimT0rQ4nZ6MATHXv3ndTWgHWSgDlEvs2gMe6cZ_8wzthtHvYrza3L_iYf7wb0YiZA3WbN08TKH5=w1623-h932-no?authuser=1);
+    background-repeat: no-repeat;
+    background-color: rgb(192,28,28);
+    background-size: 100%;
+}
 .slide {
     border: 0.5px solid grey;
     border-radius: 7px;
@@ -86,7 +92,8 @@ a:hover {
     -webkit-line-clamp: 2; /* number of lines to show */
     line-clamp: 2;
     -webkit-box-orient: vertical;
-    width: 200px;
+    width: 100%;
+
 }
 h5.pricesale {
     color: #be1e2d;
@@ -94,14 +101,17 @@ h5.pricesale {
 h4.d-inline{
     padding-left: 10px;
 }
+h4.d-inline > a{
+    color: white;
+}
 .caption {
 }
 .khuyenmai > h4 {
     padding-top: 12px;
     padding-left: 12px;
-    color: rgb(255, 255, 0);
+    color: red;
     font-style: italic;
-    text-shadow: -2px -2px 1.5px rgb(255, 81, 0);
+    text-shadow: -2px -2px 1.5px green;
     display: inline-block;
 }
 #timer > div {
@@ -147,11 +157,12 @@ h4.d-inline{
     border: 1px solid #E5E7EB !important;
     margin-left: 5px;
     border-radius: 100px;
+    background-color: white;
 }
     .d-l2 > a:hover, .d-l2 > a:focus {
         box-shadow: none !important;
-        background-color: #be1e2d;
-        color: white !important;
+        background-color: white;
+        color: #be1e2d !important;
     }
 .slick-prev, .slick-next {
     background-color: transparent;
@@ -214,4 +225,86 @@ h6.price{
         margin-right: auto;
         margin-left: auto;
         margin-top: 5px;
+    }
+.sticky-side-banner {
+}
+
+    .sticky-side-banner > div > div {
+        position: absolute;
+        top: 175px;
+        border-radius: 0px 0px 20px 20px;
+        height: 325px;
+        width: 115px;
+        display: block;
+    }
+
+.side-banner-header {
+    display: block;
+    height: 10px;
+    background-color: black;
+    border-radius: 10px;
+}
+
+    .side-banner-header > div {
+        display: block;
+        height: 100%;
+        width: 88%;
+        background-color: #fed100;
+        margin: auto;
+    }
+
+.side-banner-content {
+    background-color: #be1e2d;
+    border-radius: 0px 0px 65px 65px;
+    margin-left: 7.5px;
+    margin-right: 7.5px;
+    color: #fed100;
+    font-family: 'Kolker Brush', cursive;
+    text-align: center;
+    height: 265px;
+    width: 100px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-bottom: 5px;
+}
+
+    .side-banner-content > h1 {
+        border-left: 3px solid #fed100;
+        border-right: 3px solid #fed100;
+        border-bottom: 1px solid #fed100;
+        border-radius: 0px 0px 65px 65px;
+        min-height: 100%;
+    }
+
+.sticky-side-banner .side-banner-left {
+    left: calc(((100vw - 1200px)/2) - 110px);
+}
+
+.sticky-side-banner .side-banner-right {
+    right: calc(((100vw - 1200px)/2) - 110px);
+}
+
+.side-banner-footer {
+    width: 100%;
+}
+
+    .side-banner-footer > img {
+        height: 50%;
+        width: 50%;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+.bottom-left-img {
+    width: 500px;
+    height: 500px;
+    position: fixed;
+    top: 575px;
+    left: calc(((100vw - 1200px)/2) - 130px);
+}
+
+    .bottom-left-img > img {
+        width: 30%;
+        height: 30%;
     }
