--- a/wwwroot/css/views/home/productlist.css
+++ b/wwwroot/css/views/home/productlist.css
@@ -47,7 +47,7 @@ h6.price {
     -webkit-line-clamp: 2; /* number of lines to show */
     line-clamp: 2;
     -webkit-box-orient: vertical;
-    width: 200px;
+    width: 100%;
 }
 .card-body {
     height: 325px;
